// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableBody /> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="c0"
  offset="0"
/>
`;

exports[`<TableBody /> should render correctly when fixedHeader 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100vh;
  overflow-y: scroll;
}

<div
  class="c0"
  offset="0"
/>
`;

exports[`<TableBody /> should render correctly when fixedHeader and fixedHeaderScrollHeight is set 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100px;
  overflow-y: scroll;
}

<div
  class="c0"
  offset="0"
/>
`;

exports[`<TableBody /> should render correctly when fixedHeader with an offset 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - 0);
  overflow-y: scroll;
}

<div
  class="c0"
  offset="0"
/>
`;

exports[`<TableBody /> should render correctly when fixedHeader with an offset with a value 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: calc(100vh - 100px);
  overflow-y: scroll;
}

<div
  class="c0"
  offset="100px"
/>
`;
